--- a/predictor_app/test.html
+++ b/predictor_app/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Prediction Wizard</title>
+    <title>Number Prediction</title>
     <style>
 
      body {
